Archive2/16/a07b47ba69e715/output
main.cpp: In function 'main':
main.cpp:7:5: error: implicit declaration of function 'aligned_alloc' [-Wimplicit-function-declaration]
     int *p = aligned_alloc(16, 32);
     ^
main.cpp:7:14: error: initialization makes pointer from integer without a cast
     int *p = aligned_alloc(16, 32);
              ^
main.cpp:9:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(unsigned char));
                      ^
main.cpp:10:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(int));
                      ^
main.cpp:11:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(double));
                      ^
main.cpp:12:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(long double));
                      ^
main.cpp:13:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(long double _Complex));
                      ^
main.cpp:14:22: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("%2zu\n", _Alignof(max_align_t));
                      ^
main.cpp:14:31: error: 'max_align_t' undeclared (first use in this function)
     printf("%2zu\n", _Alignof(max_align_t));
                               ^
main.cpp:14:31: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:14:22: error: ISO C does not allow '_Alignof (expression)' [-Wpedantic]
     printf("%2zu\n", _Alignof(max_align_t));
                      ^
main.cpp:26:36: error: ISO C99 does not support '_Alignof' [-Wpedantic]
     printf("_Alignof(s) = %2zu\n", _Alignof(struct s));
                                    ^
main.cpp:33:5: error: ISO C99 does not support '_Alignas' [-Wpedantic]
     _Alignas(16) int b;
     ^
main.cpp:7:10: warning: unused variable 'p' [-Wunused-variable]
     int *p = aligned_alloc(16, 32);
          ^
